<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <ImageView
            android:id="@+id/restaurantDetailsImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#03A9F4"
            android:src="@drawable/restaurant"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/detailsImageDesription" />

    </RelativeLayout>
<<<<<<< HEAD

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorIcons"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@mipmap/ic_launcher_round"
            app:civ_border_color="#FF000000"
            app:civ_border_width="4dp" />
=======
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/colorIcons">
<!--        <de.hdodenhof.circleimageview.CircleImageView-->
<!--            android:id="@+id/profile_image"-->
<!--            android:layout_width="96dp"-->
<!--            android:layout_height="96dp"-->
<!--            android:src="@mipmap/ic_launcher_round"-->
<!--            android:padding="8dp"-->
<!--            app:civ_border_width="4dp"-->
<!--            app:civ_border_color="#FF000000"/>-->

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@mipmap/ic_launcher_round"
            android:padding="8dp"
            />
>>>>>>> 2c8ff2cd288e1fbe62ac0ec84fd4004b423d058b

        <TextView
            android:id="@+id/Restaurant_Details_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/profile_image"
            android:layout_toRightOf="@+id/profile_image"
            android:text="@string/res_name"
            android:textSize="20sp"
<<<<<<< HEAD
            android:textStyle="bold" />
=======
            android:textStyle="bold"/>
>>>>>>> 2c8ff2cd288e1fbe62ac0ec84fd4004b423d058b

        <TextView
            android:id="@+id/Restaurant_Details_Category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Restaurant_Details_Name"
            android:layout_alignStart="@+id/Restaurant_Details_Name"
            android:layout_alignLeft="@+id/Restaurant_Details_Name"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="4dp"
            android:text="@string/category_type"
<<<<<<< HEAD
            android:textColor="@android:color/darker_gray" />
=======
            android:textColor="@android:color/darker_gray"/>
>>>>>>> 2c8ff2cd288e1fbe62ac0ec84fd4004b423d058b


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color">
<<<<<<< HEAD
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/detailsRecyclerView">

        </androidx.recyclerview.widget.RecyclerView>


=======
>>>>>>> 2c8ff2cd288e1fbe62ac0ec84fd4004b423d058b

    </RelativeLayout>

</LinearLayout>